fixed overflow issue for projects page heading

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,7 +1,7 @@
 #projects-container {
   min-height: auto !important;
   display: flex !important;
-  overflow-y: scroll;
+  overflow-y: hidden;
   justify-content: center !important;
   align-items: center !important;
   flex-direction: column !important;
